2005-12-12  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* Documentation/topdocs/NEWS.tely: strip out-www.

	* lily/include/grob-interface.hh: include lily-guile.hh not libguile.h

	* config.make.in (AR): add AR and RANLIB

	* flower/libc-extension.cc: include cassert

	* stepmake/stepmake/generic-vars.make (MINGW_BUILD): more robust
	darwin check.

2005-12-11  Graham Percival  <gpermus@gmail.com>

	* stepmake/stepmake/generic-vars.make: define DARWIN_BUILD.

	* stepmake/stepmake/python-modules-vars.make: define
	SHARED_FLAGS for OSX.  Thanks Johannes Schindelin!

	* THANKS: added Johannes Schindelin.

2005-12-10  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/midi.c (pymidi_parse): use memcmp() iso. strcmp().

	* ly/engraver-init.ly (AncientRemoveEmptyStaffContext): remove
	Span_arpeggio_engraver, add Tweak_engraver to Score context. 

	* lily/parser.yy: reorganize file layout.

	* ly/music-functions-init.ly: add tweak music function.

	* lily/grob-info.cc (ultimate_music_cause): new function:
	recursively lookup causes. 

	* lily/parser.yy (chord_body_element): allow music functions for
	post-events, allow music functions for chord elements. 
 
	* lily/font-config-scheme.cc (display_fontset): add cast.

	* python/convertrules.py (FatalConversionError.sub_syms): \tag
	#'(a b) -> \tag #'a \tag #'b rule.

	* python/musicexp.py (Output_printer.dump_version): new function

2005-12-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/parser.yy (FIXME): remove \tag
	(FIXME): remove tag_music() function.

	* lily/lily-lexer.cc: remove \tag

	* ly/music-functions-init.ly: define music-function "tag"

	* lily/parser.yy (chord_body_element): allow tags in chord bodies.

2005-12-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PATCH_LEVEL): release 2.7.22

	* input/regression/lyric-hyphen-retain.ly: renew.

	* scm/define-grobs.scm (all-grob-descriptions): add LyricSpace
	grob

	* lily/lyric-hyphen.cc (set_spacing_rods): use minimum-distance